--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <div class="celebrate hidden" id="celebration">
   <h2>🍻 CHEERS 🍻</h2>
   <p>
-    WOW! You all are legends 😎🍻<br><br>
+    WOW! You are legends 😎🍻<br><br>
     Everyone is ready — finally!<br>
     Let’s catch up today evening at the same place with the core members.<br><br>
     Time to celebrate and live life — because you only live once 🍻🔥
@@ -204,3 +204,4 @@
 
 </body>
 </html>
+
