--- a/index.html
+++ b/index.html
@@ -11,39 +11,39 @@
   body {
     margin: 0;
     height: 100vh;
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    color: white;
   }
 
   .card {
     background: #111;
-    padding: 50px 30px;
+    padding: 40px 25px;
     border-radius: 25px;
     width: 90%;
-    max-width: 450px;
+    max-width: 460px;
     text-align: center;
     box-shadow: 0 20px 45px rgba(0,0,0,0.6);
-    color: white;
   }
 
   h1 {
     color: #f5c16c;
-    font-size: 2rem;
-    margin-bottom: 50px;
+    font-size: 1.9rem;
+    margin-bottom: 30px;
   }
 
   .btn-row {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    margin-top: 30px;
   }
 
   button {
-    padding: 18px 40px;
+    padding: 16px 36px;
     font-size: 1.1rem;
     border-radius: 40px;
     border: none;
@@ -62,53 +62,69 @@
     position: relative;
   }
 
-  /* Tease message */
   .tease {
     position: fixed;
-    background: #000;
+    background: black;
     padding: 8px 14px;
     border-radius: 20px;
     font-size: 0.9rem;
     color: #f5c16c;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s;
   }
 
-  /* Celebration */
   .celebrate {
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.9);
+    background: rgba(0,0,0,0.95);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
-    color: #f5c16c;
     padding: 25px;
-    animation: fadeIn 1s ease;
+    overflow-y: auto;
   }
 
   .celebrate h2 {
-    font-size: 2.4rem;
-    margin-bottom: 15px;
+    color: #f5c16c;
+    margin-bottom: 10px;
   }
 
-  .celebrate p {
-    font-size: 1.1rem;
-    line-height: 1.5;
+  .countdown {
+    font-size: 1.4rem;
+    margin: 15px 0;
+    color: #ffd27d;
   }
 
-  .hidden {
-    display: none !important;
+  .names {
+    margin-top: 20px;
+    text-align: left;
+    width: 100%;
+    max-width: 350px;
+    background: #000;
+    padding: 15px;
+    border-radius: 15px;
   }
 
-  @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
+  .names h3 {
+    color: #f5c16c;
+    margin-bottom: 10px;
+    text-align: center;
   }
+
+  .names ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .names li {
+    padding: 6px 0;
+    border-bottom: 1px solid #333;
+  }
+
+  .hidden { display: none; }
 
   .confetti {
     position: absolute;
@@ -125,6 +141,8 @@
 
 <body>
 
+<audio id="cheerSound" src="cheers.mp3"></audio>
+
 <div class="card" id="mainCard">
   <h1>Hey ultra legend buddies 😎🍻<br>Are we ready for drinks today?</h1>
 
@@ -137,13 +155,19 @@
 <div class="tease" id="teaseMsg"></div>
 
 <div class="celebrate hidden" id="celebration">
-  <h2>🍻 CHEERS 🍻</h2>
+  <h2>🍻 CHEERS LEGENDS 🍻</h2>
+
+  <div class="countdown" id="countdown"></div>
+
   <p>
-    WOW! You are legends 😎🍻<br><br>
-    Everyone is ready — finally!<br>
-    Let’s catch up today evening at the same place with the core members.<br><br>
-    Time to celebrate and live life — because you only live once 🍻🔥
+    All are ready! Let’s catch up today evening at the same place 🍻🔥<br>
+    Live life — because you only live once 😎
   </p>
+
+  <div class="names">
+    <h3>Legends Joining Tonight 🍻</h3>
+    <ul id="nameList"></ul>
+  </div>
 </div>
 
 <script>
@@ -152,13 +176,15 @@
   const tease = document.getElementById("teaseMsg");
   const mainCard = document.getElementById("mainCard");
   const celebration = document.getElementById("celebration");
+  const cheerSound = document.getElementById("cheerSound");
+  const nameList = document.getElementById("nameList");
+  const countdownEl = document.getElementById("countdown");
 
   const messages = [
     "Come on bro 🍻",
-    "No excuses today 😎",
-    "Legends don’t say no 🍻",
-    "Beer is waiting 🍺",
-    "Don’t break the brotherhood 😤"
+    "Legends don’t say no 😎",
+    "Beer is calling 🍺",
+    "Brotherhood first 🍻"
   ];
 
   function escapeNo() {
@@ -183,10 +209,56 @@
   noBtn.addEventListener("click", escapeNo);
 
   yesBtn.addEventListener("click", () => {
+    cheerSound.play();
+
+    const name = prompt("Legend name please 😎🍻");
+    if (name) saveName(name);
+
     mainCard.classList.add("hidden");
     celebration.classList.remove("hidden");
     fireCrackers();
+    startCountdown();
+    loadNames();
   });
+
+  function saveName(name) {
+    const names = JSON.parse(localStorage.getItem("boozeNames")) || [];
+    if (!names.includes(name)) {
+      names.push(name);
+      localStorage.setItem("boozeNames", JSON.stringify(names));
+    }
+  }
+
+  function loadNames() {
+    nameList.innerHTML = "";
+    const names = JSON.parse(localStorage.getItem("boozeNames")) || [];
+    names.forEach(n => {
+      const li = document.createElement("li");
+      li.textContent = "🍻 " + n;
+      nameList.appendChild(li);
+    });
+  }
+
+  function startCountdown() {
+    const target = new Date();
+    target.setHours(21,0,0,0); // 9:00 PM
+
+    setInterval(() => {
+      const now = new Date();
+      const diff = target - now;
+
+      if (diff <= 0) {
+        countdownEl.innerText = "🍻 IT’S TIME 🍻";
+        return;
+      }
+
+      const h = Math.floor(diff / 3600000);
+      const m = Math.floor((diff % 3600000) / 60000);
+      const s = Math.floor((diff % 60000) / 1000);
+
+      countdownEl.innerText = `⏳ ${h}h ${m}m ${s}s left till 9:00 PM`;
+    }, 1000);
+  }
 
   function fireCrackers() {
     const emojis = ["🍻","🥂","🔥"];
@@ -204,4 +276,3 @@
 
 </body>
 </html>
-
