--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <div class="countdown" id="countdown"></div>
 
   <p>
-    All are ready! Let’s catch up today evening at the same place 🍻🔥<br>
+     Ready Boss! Let’s catch up today evening at the same place 🍻🔥<br>
     Live life — because you only live once 😎
   </p>
 
@@ -241,7 +241,7 @@
 
   function startCountdown() {
     const target = new Date();
-    target.setHours(21,0,0,0); // 9:00 PM
+    target.setHours(20,0,0,0); // 8:00 PM
 
     setInterval(() => {
       const now = new Date();
@@ -276,3 +276,4 @@
 
 </body>
 </html>
+
